--- a/Quality/Quality/Areas/BulkFGT/Views/BulkFGTMailGroup/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/BulkFGTMailGroup/Index.cshtml
@@ -1,7 +1,378 @@
-﻿
+﻿@using DatabaseObject.ManufacturingExecutionDB
+
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+@model List<Quality_MailGroup>
 
+<link href="~/ThirdParty/plugins/DataTables/datatables.min.css" rel="stylesheet" />
+<link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
+<script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
+
+
+<style>
+
+    #myTable_info {
+        color: black
+    }
+
+    #myTable_previous, #myTable_next {
+        color: black !important;
+    }
+
+    .row-name {
+        color: black;
+        font-size: 1.2em;
+    }
+</style>
+
+<div class="main-content">
+
+    <header class="page-header">
+        <h3>
+            <i class=""></i><span>Bulk FGT Mail Group</span>
+        </h3>
+        <div class="breadcrumb" style=" position: relative;">
+            <div>Home</div>
+            <div class="current">Bulk FGT Mail Group</div>
+            <input id="btnNew" onclick="New_Click('', 'New')" class="site-btn btn-gy btn-sm" style="bottom: 1vh; right: 2em; position: absolute; "  type="button" name="name" value="New" />
+        </div>
+    </header>
+
+
+    <div class="main-area">
+        <div class="content-scroll">
+            <div class="inner-scroll" style="float:left">
+
+                <div>
+                    <table id="myTable" class="table table-striped display">
+                        <thead class="row-name">
+                            <tr>
+                                <th>Factory</th>
+                                <th>Group Name</th>
+                                <th>To Address</th>
+                                <th>Cc Address</th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr class="row-content" style="vertical-align: middle; text-align: center;">
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.FactoryID)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.GroupName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.ToAddress)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CcAddress)
+                                    </td>
+                                    <td>
+                                        <img onclick="Edit_Pic_Click('@item.FactoryID','@item.GroupName')" style="width:1.2vw;cursor:pointer;" src="~/Image/Icon/Edit.png" />
+                                    </td>
+                                    <td>
+                                        <img style="width:1.2vw;cursor:pointer;" src="~/Image/Icon/Delete.png" />
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+<!--Detail彈跳視窗-->
+<div class="detail-dialog to-edit-detail" title="Detail">
+    <div class="detail-dialog-content dialog-content-w-icon" style="height:75vh">
+        <form class="page-display-form nr-form" style="width:80%;padding:0;">
+            <div class="form-item" style="height: 100%;">
+                <table style="border: 1px solid gray;font-size: 1vw;width: 100%;height: 10vh;text-align: center;background-color: transparent;color: white;">
+                    <tr>
+                        <td style="width:10vw;border: 1px solid gray;height: 5vh;font-size: 2vh;background-color:#696868;vertical-align: middle;">
+                            <label>Factory</label>
+                        </td>
+                        <td style="border: 1px solid gray;font-size: 2vh;vertical-align: middle;width: 15vw;">
+                            @Html.DropDownList("Factory", (List<SelectListItem>)ViewBag.FactoryList, null, new { @class = "form-control inputStyle" })
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td style="width:10vw;border: 1px solid gray;height: 5vh;font-size: 2vh;background-color:#696868;vertical-align: middle;">
+                            <label>Group Name</label>
+                        </td>
+                        <td style=" border: 1px solid gray;font-size: 2vh;vertical-align: middle;">
+                            <div class="detail_Head" id="GroupName"></div>
+                            <input class="input_Head" style="width: 90%; height: 90%;" tpye="text" id="input_GroupName" value="" />
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td style="width: 10vw; border: 1px solid gray; height: 25vh; font-size: 2vh; background-color: #696868; vertical-align: middle;">
+                            <label>To Address</label>
+                        </td>
+                        <td style=" border: 1px solid gray;font-size: 2vh;vertical-align: middle;">
+                            <span class="detail_Head" id="ToAddress"></span>
+                            <input class="input_Head " style="width: 90%; height: 90%;" tpye="text" id="input_ToAddress" value="" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="width: 10vw; border: 1px solid gray; height: 25vh; font-size: 2vh; background-color: #696868; vertical-align: middle;">
+                            <label>Cc Address</label>
+                        </td>
+                        <td style=" border: 1px solid gray;font-size: 2vh;vertical-align: middle;">
+                            <span class="detail_Head" id="CcAddress"></span>
+                            <input class="input_Head" style="width: 90%; height: 90%;" tpye="text" id="input_CcAddress" value="" />
+                        </td>
+                    </tr>
+                </table>
+                <br />
+
+            </div>
+        </form>
+    </div>
+</div>
+
+
+<script type="text/javascript">
+    var msg = new MessagerAlert();
+
+    var EditMode = false;
+
+    $(function () {
+
+        $('#myTable').DataTable({
+            "pageLength": 20,
+            "filter": false,
+            "paging": true,
+            "scrollY": "49vh",
+            "scrollCollapse": true,
+            columnDefs: [
+                { width: '10%', targets: 0 },
+                { width: '15%', targets: 1 },
+                { width: '20%', targets: 2 },
+                { width: '20%', targets: 3 },
+                { width: '5%', targets: 4, orderable: false },
+                { width: '5%', targets: 5, orderable: false },
+            ]
+        });
+
+    });
+
+        function New_Click() {
+
+            $.ajax({
+            url: '@Url.Action("GetDetail")',
+            data: { Factory: '', GroupName: ''},
+            type: 'POST',
+            dataType: "json",
+            async: false,
+            success: function (res) {
+                if (res !='') {
+                    InitDetailDataTable(res);
+                }
+                else {
+                    msg.WithErrorCheck(res.ErrorMessage, function () {
+                        location.reload();
+                    });
+                }
+
+            }
+        });
+
+
+        $(".to-edit-detail").dialog({
+            width: "70%",
+            dialogClass: "add-contact-box",
+            buttons: {
+                "1": {
+                    text: 'Save',
+                    click: function (btn, obj) {
+                        //按下Save
+                        Dialog_Save_Click("Create");
+                    },
+                    "class": "site-btn btn-red btn-lg",
+                    "ID": "dialogEdit"
+                },
+                "2": {
+                    text: 'Exit',
+                    click: function () {
+                        $(this).dialog("close");
+                    }
+                    , "class": "site-btn btn-gy btn-lg"
+                },
+            },
+        });
+        $(".to-edit-detail").dialog("open");
+        $(".to-edit-detail").on("dialogclose", function (event, ui) {
+            EditMode = false;
+
+        });
+
+        EditMode = true;
+        HeadToggle('Create');
+        $(".detail_Chk").removeAttr("disabled");
+    }
+
+    function Edit_Pic_Click(Factory, GroupName) {
+            HeadToggle('Update');
+        $.ajax({
+            url: '@Url.Action("GetDetail")',
+            data: { Factory: Factory, GroupName: GroupName},
+            type: 'POST',
+            dataType: "json",
+            async: false,
+            success: function (res) {
+                if (res!="") {
+                    InitDetailDataTable(res);
+                }
+                else {
+                    msg.WithErrorCheck(res.ErrorMessage, function () {
+                        location.reload();
+                    });
+                }
+
+            }
+        });
+
+        $(".to-edit-detail").dialog({
+            width: "70%",
+            dialogClass: "add-contact-box",
+            buttons: {
+                "1": {
+                    text: 'Edit',
+                    click: function (btn, obj) {
+
+                        if ($('#dialogEdit').text() == 'Edit') {
+                            //按下Edit
+                            Dialog_Edit_Click();
+                        }
+                        else {
+                            //按下Save
+                            Dialog_Save_Click('Update');
+                        }
+                    },
+                    "class": "site-btn btn-red btn-lg",
+                    "ID": "dialogEdit"
+                },
+                "2": {
+                    text: 'Exit',
+                    click: function () {
+                        $(this).dialog("close");
+                    }
+                    , "class": "site-btn btn-gy btn-lg"
+                },
+            },
+        });
+        $(".to-edit-detail").dialog("open");
+        $(".to-edit-detail").on("dialogclose", function (event, ui) {
+            EditMode = false;
+
+        });
+
+    }
+
+
+
+    //初始化Detail的表格
+    function InitDetailDataTable(res) {
+
+        var Factory = document.getElementById("Factory");
+        Factory.value = res.FactoryID;
+
+        $("#GroupName").text(res.GroupName);
+        $("#ToAddress").text(res.ToAddress);
+        $("#CcAddress").text(res.CcAddress);
+        InputToggle();
+    }
+
+    function Dialog_Edit_Click() {
+
+        //按下Edit
+        $('#dialogEdit').text('Save');
+        $(".detail_Chk").removeAttr("disabled");
+        InputToggle();
+        EditMode = true;
+        HeadToggle('Update');
+    }
+
+        // User Detail 修改
+    function Dialog_Save_Click(Action) {
+
+        InputToggle();
+        if (Action == 'Edit') {
+            $('#dialogEdit').text('Edit');
+            $(".detail_Chk").attr("disabled", "disabled");
+            EditMode = false;
+            HeadToggle('Update');
+        }
+        /*--------------------*/
+
+        var Factory = document.getElementById("Factory").value;
+        var GroupName = $("#GroupName").text()
+        var ToAddress = $("#ToAddress").text()
+
+        if (Factory == "" || GroupName == "" || ToAddress =="")
+        {
+            msg.WithWarning("Factory, Group Name and To Address cannot be empty.");
+            return;
+        }
+
+        $('#dialogEdit').text('Edit');
+        EditMode = false;
+        HeadToggle('Update');
+    }
+
+
+    function InputToggle() {
+
+        if (EditMode) {
+            //編輯模式觸發時機：按下Save
+            //將文字方塊的值推給純文字標籤
+            $("#Position").text($("#input_" + "Position").val());
+            $("#ToAddress").text($("#input_" + "ToAddress").val());
+            $("#CcAddress").text($("#input_" + "CcAddress").val());
+
+        }
+        else {
+            //非編輯模式觸發時機：剛開啟視窗、按下Edit
+            //將純文字標籤的值推給文字方塊
+            $("#input_" + "Position").val($("#Position").text());
+            $("#input_" + "ToAddress").val($("#ToAddress").text());
+            $("#input_" + "CcAddress").val($("#CcAddress").text());
+        }
+    }
+
+
+    function HeadToggle(Action) {
+
+        if (EditMode) {
+            $(".detail_Head").hide();
+            $(".input_Head").show();
+            $("#Factory").removeAttr("disabled");
+
+        }
+        else {
+            $(".detail_Head").show();
+            $(".input_Head").hide();
+            $("#Factory").attr("disabled", "disabled");
+        }
+
+        if (Action == 'Update') {
+            $("#GroupName").show();
+            $("#input_GroupName").hide();
+        }
+    }
+
+
+</script>
