--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Index.cshtml
@@ -200,6 +200,7 @@
 
 
     function checkDetail() {
+        ShowLoading();
         var selected = [];
         var selectedList = $('input:checkbox:checked');
         selectedList.each(function () {
