Bulk FGT Mail Group layout

--- a/Quality/Quality/Areas/BulkFGT/Views/BulkFGTMailGroup/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/BulkFGTMailGroup/Index.cshtml
@@ -25,6 +25,7 @@
     .row-name {
         color: black;
         font-size: 1.2em;
+        background-color:gray;
     }
 </style>
 
@@ -66,10 +67,12 @@
                                         @Html.DisplayFor(modelItem => item.FactoryID)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.GroupName)
+                                        <a href="#" onclick="Link_Click('@item.FactoryID','@item.GroupName')">  @Html.DisplayFor(modelItem => item.GroupName)</a>
+                                       
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.ToAddress)
+
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.CcAddress)
@@ -190,7 +193,8 @@
             }
         });
 
-
+        // isClickNew用來判斷是不是從New按鈕按下
+        var isClickNew = true;
         $(".to-edit-detail").dialog({
             width: "70%",
             dialogClass: "add-contact-box",
@@ -198,8 +202,26 @@
                 "1": {
                     text: 'Save',
                     click: function (btn, obj) {
-                        //按下Save
-                        Dialog_Save_Click("Create");
+
+                        if ($('#dialogEdit').text() == 'Edit') {
+                            //按下Edit
+                            Dialog_Edit_Click();
+                        }
+                        else {
+                            if (isClickNew) {
+                                Dialog_Save_Click("Create");
+                                isClickNew = false;
+
+                            }
+                            else {
+                                Dialog_Save_Click('Update');
+                            }
+
+                        }
+
+
+
+
                     },
                     "class": "site-btn btn-red btn-lg",
                     "ID": "dialogEdit"
@@ -208,6 +230,7 @@
                     text: 'Exit',
                     click: function () {
                         $(this).dialog("close");
+                        isClickNew = true;
                     }
                     , "class": "site-btn btn-gy btn-lg"
                 },
@@ -221,11 +244,11 @@
 
         EditMode = true;
         HeadToggle('Create');
-        $(".detail_Chk").removeAttr("disabled");
     }
 
-    function Edit_Pic_Click(Factory, GroupName) {
-            HeadToggle('Update');
+
+    function Link_Click(Factory, GroupName) {
+
         $.ajax({
             url: '@Url.Action("GetDetail")',
             data: { Factory: Factory, GroupName: GroupName},
@@ -245,12 +268,77 @@
             }
         });
 
+        EditMode = false;
+        HeadToggle('Update');
+
         $(".to-edit-detail").dialog({
             width: "70%",
             dialogClass: "add-contact-box",
             buttons: {
                 "1": {
                     text: 'Edit',
+                    click: function (btn, obj) {
+
+                        if ($('#dialogEdit').text() == 'Edit') {
+                            //按下Edit
+                            Dialog_Edit_Click();
+                        }
+                        else {
+                            //按下Save
+                            Dialog_Save_Click('Update');
+                        }
+                    },
+                    "class": "site-btn btn-red btn-lg",
+                    "ID": "dialogEdit"
+                },
+                "2": {
+                    text: 'Exit',
+                    click: function () {
+                        $(this).dialog("close");
+                    }
+                    , "class": "site-btn btn-gy btn-lg"
+                },
+            },
+        });
+        $(".to-edit-detail").dialog("open");
+        $(".to-edit-detail").on("dialogclose", function (event, ui) {
+            EditMode = false;
+
+        });
+
+    }
+
+
+    function Edit_Pic_Click(Factory, GroupName) {
+
+        $.ajax({
+            url: '@Url.Action("GetDetail")',
+            data: { Factory: Factory, GroupName: GroupName},
+            type: 'POST',
+            dataType: "json",
+            async: false,
+            success: function (res) {
+                if (res!="") {
+                    InitDetailDataTable(res);
+                }
+                else {
+                    msg.WithErrorCheck(res.ErrorMessage, function () {
+                        location.reload();
+                    });
+                }
+
+            }
+        });
+
+        EditMode = true;
+        HeadToggle('Update');
+
+        $(".to-edit-detail").dialog({
+            width: "70%",
+            dialogClass: "add-contact-box",
+            buttons: {
+                "1": {
+                    text: 'Save',
                     click: function (btn, obj) {
 
                         if ($('#dialogEdit').text() == 'Edit') {
@@ -300,7 +388,6 @@
 
         //按下Edit
         $('#dialogEdit').text('Save');
-        $(".detail_Chk").removeAttr("disabled");
         InputToggle();
         EditMode = true;
         HeadToggle('Update');
@@ -310,13 +397,6 @@
     function Dialog_Save_Click(Action) {
 
         InputToggle();
-        if (Action == 'Edit') {
-            $('#dialogEdit').text('Edit');
-            $(".detail_Chk").attr("disabled", "disabled");
-            EditMode = false;
-            HeadToggle('Update');
-        }
-        /*--------------------*/
 
         var Factory = document.getElementById("Factory").value;
         var GroupName = $("#GroupName").text()
@@ -339,7 +419,7 @@
         if (EditMode) {
             //編輯模式觸發時機：按下Save
             //將文字方塊的值推給純文字標籤
-            $("#Position").text($("#input_" + "Position").val());
+            $("#GroupName").text($("#input_" + "GroupName").val());
             $("#ToAddress").text($("#input_" + "ToAddress").val());
             $("#CcAddress").text($("#input_" + "CcAddress").val());
 
@@ -347,7 +427,7 @@
         else {
             //非編輯模式觸發時機：剛開啟視窗、按下Edit
             //將純文字標籤的值推給文字方塊
-            $("#input_" + "Position").val($("#Position").text());
+            $("#input_" + "GroupName").val($("#GroupName").text());
             $("#input_" + "ToAddress").val($("#ToAddress").text());
             $("#input_" + "CcAddress").val($("#CcAddress").text());
         }
@@ -371,6 +451,7 @@
         if (Action == 'Update') {
             $("#GroupName").show();
             $("#input_GroupName").hide();
+            $("#Factory").attr("disabled", "disabled");
         }
     }
 
