--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
@@ -276,7 +276,7 @@
                             <tr>
                                 <td><h5>Last Result</h5></td>
                                 <td class="@ResultFontColor">
-                                    @Model.garmentTest.Result
+                                    @ResultVal
                                 </td>
                                 <td><h5>Last Test Date</h5></td>
                                 <td>
